--- a/superadmin/templates/superadmin/students-list.html
+++ b/superadmin/templates/superadmin/students-list.html
@@ -82,11 +82,14 @@
                                 </td>
                                 <td>
                                     <div class="d-flex align-items-center gap-2">
-                                        <a href="{% url 'edit_student' student.id %}" class="action-btn" title="Edit Student">
+                                        <a href="{% url 'edit_student' student.id %}" class="action-btn" title="Edit">
                                             <span class="material-symbols-outlined">edit</span>
                                         </a>
-                                        <a href="{% url 'view_student' student.id %}" class="action-btn" title="View Student">
+                                        <a href="{% url 'view_student' student.id %}" class="action-btn" title="View">
                                             <span class="material-symbols-outlined">visibility</span>
+                                        </a>
+                                        <a href="{% url 'delete_student' student.id %}" class="action-btn action-btn-delete" title="Delete" onclick="return confirm('Are you sure you want to delete this student?');">
+                                            <span class="material-symbols-outlined">delete</span>
                                         </a>
                                     </div>
                                 </td>
