--- a/superadmin/templates/superadmin/school-admin-list.html
+++ b/superadmin/templates/superadmin/school-admin-list.html
@@ -88,7 +88,7 @@
               {% empty %}
               <tr>
                 <td colspan="6" class="text-center text-muted py-5">
-                  <span class="material-symbols-outlined" style="font-size: 48px; opacity: 0.3;">admin_panel_settings</span>
+                  <span class="material-symbols-outlined" style="font-size: 48px; line-height: 1; display: inline-block; width: 48px; height: 48px; opacity: 0.3;">admin_panel_settings</span>
                   <p class="mt-2">No school admins found. Add your first admin to get started!</p>
                 </td>
               </tr>
