--- a/superadmin/templates/superadmin/school-list.html
+++ b/superadmin/templates/superadmin/school-list.html
@@ -84,7 +84,7 @@
               {% empty %}
               <tr>
                 <td colspan="7" class="text-center text-muted py-5">
-                  <span class="material-symbols-outlined" style="font-size: 48px; opacity: 0.3;">school</span>
+                  <span class="material-symbols-outlined" style="font-size: 48px; line-height: 1; display: inline-block; width: 48px; height: 48px; opacity: 0.3;">school</span>
                   <p class="mt-2">No schools found. Add your first school to get started!</p>
                 </td>
               </tr>
